syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SecurityLogin {
	rpc ReadSecurityLogin(SecurityLoginRequest) returns (SecurityLoginPayload);
	rpc CreateSecurityLogin(SecurityLoginPayload) returns (google.protobuf.Empty);
	rpc UpdateSecurityLogin(SecurityLoginPayload) returns (google.protobuf.Empty);
	rpc DeleteSecurityLogin(SecurityLoginPayload) returns (google.protobuf.Empty);
}

message SecurityLoginRequest{
		string Id=1;
	}

	message SecurityLoginPayload {
		string Id = 1;
        string Login = 2;
        string Password = 3;
        google.protobuf.Timestamp Created = 4;
        google.protobuf.Timestamp PasswordUpdate = 5;
        google.protobuf.Timestamp AgreementAccepted = 6;
        bool IsLocked = 7;      
        bool IsInactive = 8;
         string EmailAddress = 9;
        string PhoneNumber = 10;
        string FullName = 11;
        bool ForceChangePassword = 12;
        string PrefferredLanguage = 13;
	}